crates/compiler/test_syntax/tests/snapshots/fail/ability_demands_not_indented_with_first.expr.roc
MEq has
    eq : a, a -> U64 | a has MEq
        neq : a, a -> U64 | a has MEq

1
